...
              </AlertDialogFooter>
            </AlertDialogContent>
          </AlertDialog>

          <FormControl className="p-4 border border-outline-200 rounded-lg w-full mb-6">
            <Heading className="text-typography-100" size="lg">
              Authentication
            </Heading>
            <VStack className="gap-4">
              <VStack space="lg">
                <Text className="text-typography-100">Email</Text>

                <Input className={inputClassName}>
...
                  testID={automationLocatorsDataState.loginScreen.signInButton}
                  className="p-0"
                  size="xl"
                  onPress={signInAsync}
                  disabled={isLoading}
                >
                  <ButtonText>{isLoading ? 'Loading...' : 'Login'}</ButtonText>
                </Button>
              </VStack>
              <Divider className="my-0.5 mb-4" />
              <VStack>
                <Button
                  testID={automationLocatorsDataState.loginScreen.registerButton}
                  className="p-0"
                  size="xl"
                  onPress={signUpAsync}
                  disabled={isLoading}
                >
                  <ButtonText>{isLoading ? 'Loading...' : 'Register'}</ButtonText>
                </Button>
              </VStack>
              {pendingEmail && (
                <VStack>
                  <Button
                    testID={automationLocatorsDataState.loginScreen.resendButton}
...
